# eclipse.builder

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
eclipse_builder/: __init__.py  cli.py  feature.py  prefs.py  util.py
releases/: eclipse-4.7.2.yml  eclipse-4.7.3.yml  eclipse-4.8M6.yml  eclipse-4.8RC1.yml  eclipse-4.8RC2.yml  eclipse-java-2018-09.yml  eclipse-java-2018-09a.yml  eclipse-java-2018-09b.yml  eclipse-java-2018-12a.yml  eclipse-java-2019-03a.yml  eclipse-java-2019-03b.yml  eclipse-java-2019-06a.yml  eclipse-java-2019-09a.yml  eclipse-java-2019-12a.yml  eclipse-java-2020-06a.yml  eclipse-java-2020-09a.yml  eclipse-java-2020-12a.yml  eclipse-java-2020-12b.yml  eclipse-java-2021-03a.yml  eclipse-java-2021-06a.yml  eclipse-java-2021-09a.yml  eclipse-java-2021-12a.yml  eclipse-java-2022-03a.yml  eclipse-java-2022-06a.yml  eclipse-java-2022-09a.yml  eclipse-java-2022-12a.yml  eclipse-java-2022-12b.yml  eclipse-java-2023-03a.yml  eclipse-java-2023-06a.yml  eclipse-java-2023-09a.yml  eclipse-java-2023-12a.yml  eclipse-java-2024-03a.yml  eclipse-java-2024-03b.yml  eclipse-java-2024-03c.yml  eclipse-java-2024-03d.yml  eclipse-java-2024-06a.yml  eclipse-java-2024-06b.yml  eclipse-java-2024-09a.yml  eclipse-java-2024-09b.yml  eclipse-java-2024-09c.yml  (+14 more)
releases/configuration/: README.txt  compiler.prefs  console.prefs  content-assist.prefs  custom-java-formatter.prefs  debug.prefs  editor.prefs  fonts.prefs  git.prefs  hierarchical.prefs  jboss-answer.prefs  maven.prefs  no-intro.prefs  perspectives.prefs  team.prefs  theme.prefs  usage-report.prefs  xml.prefs
releases/configuration/packageExplorer/: dialog_settings.xml
releases/configuration/properties/: plugin.xml
releases/configuration/search/: dialog_settings.xml
src/eclipse_builder/: __init__.py  cli.py  dropins.py  eclipse_builder.py  feature.py  nfpm.py  plugins.py  prefs.py  publish.py  util.py
tests/: __init__.py  test_eclipse_builder.py
