[build-system]
requires = [
  "setuptools >= 64.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "eclipse_builder"
description = "Helpers to build custom Eclipse packages"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Environment :: Console",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
dependencies = [
  "Click==8.0.4",
  "requests==2.31.0",
  "requests-testadapter==0.3.0",
  "cachecontrol[filecache]==0.12.11",
  "lockfile==0.12.2",
  "coloredlogs==15.0",
  "pyyaml==6.0.1"
]

[[project.authors]]
name = "Laurent Almeras"
email = "lalmeras@gmail.com"

[project.urls]
repository = "https://github.com/lalmeras/eclipse.builder/"
changelog = "https://github.com/lalmeras/eclipse.builder/blob/dev/README.md"

[project.optional-dependencies]
test = [
  "tox",
  "mock>=2.0.0",
  "pexpect>=4.2.1",
  "pytest>=3.0.6",
  "pytest-cov>=2.4.0",
  "mypy",
  "pylint",
  "rope",
  "black"
]
dev = [
  "twine",
  "tbump",
  "ipdb",
  "build",
  "semver<3",
  "Sphinx"
]

[project.scripts]
eclipse-builder = "eclipse_builder.cli:main"

[tools.setuptools]
zip-safe = true
py-modules = ["eclipse_builder"]

[tool.setuptools.dynamic]
version = {attr = "eclipse_builder.__version__"}

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--cov-config .coveragerc --cov-report=xml --cov=."
testpaths = [
    "tests"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,38,39,310},pipenv,mypy,pylint
isolated_build = True
[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310, pylint, mypy
[testenv]
setenv =
    LC_ALL = en_US.utf-8
    LANG = en_US.utf-8
# use pipenv venv
[pipenv]
commands =
    pipenv run pytest {posargs}
[py]
deps =
    pytest
    pytest-cov
commands =
    pytest --cov-fail-under 100 {posargs}
[testenv:pipenv]
deps =
    pipenv
setenv =
    PIPENV_IGNORE_VIRTUALENVS = 0
commands = {[pipenv]commands}
[testenv:py{37,38,39,310}]
deps = {[py]deps}
commands = {[py]commands}
[testenv:mypy]
deps =
    mypy
commands =
    mypy --config-file pyproject.toml
[testenv:pylint]
deps =
    pylint
commands =
    pylint eclipse_builder
"""

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
files = "eclipse_builder/**/*.py"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.tbump.version]
current = "0.4.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\.
  (?P<extra>dev\d+)
  )?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "src/eclipse_builder/__init__.py"
