[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eclipse_builder"
description = "Helpers to build custom Eclipse packages"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
license = {text = "BSD 3-Clause License"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Environment :: Console",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "Click==8.1.8",
  "requests==2.32.3",
  "requests-testadapter==0.3.0",
  "cachecontrol[filecache]==0.14.2",
  "lockfile==0.12.2",
  "coloredlogs==15.0.1",
  "pyyaml==6.0.2"
]

[[project.authors]]
name = "Laurent Almeras"
email = "lalmeras@gmail.com"

[project.urls]
repository = "https://github.com/lalmeras/eclipse.builder/"
changelog = "https://github.com/lalmeras/eclipse.builder/blob/dev/README.md"

[project.optional-dependencies]
test = [
  "tox",
  "mock>=2.0.0",
  "pexpect>=4.2.1",
  "pytest>=3.0.6",
  "pytest-cov>=2.4.0",
  "mypy",
  "pylint",
  "rope",
  "black"
]
dev = [
  "twine",
  "tbump",
  "ipdb",
  "build",
  "semver<3",
  "Sphinx"
]

[project.scripts]
eclipse-builder = "eclipse_builder.cli:main"

[tool.hatch.version]
path = "src/eclipse_builder/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  "types-requests"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/}"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
files = "eclipse_builder/**/*.py"
